tests/derive_macro_tests/invalid_field_bounds.stderr
error[E0277]: the trait bound `DoesNotImplementTrace: _::rust_cc::Trace` is not satisfied
 --> tests/derive_macro_tests/invalid_field_bounds.rs:7:12
  |
7 |     field: DoesNotImplementTrace,
  |            ^^^^^^^^^^^^^^^^^^^^^ the trait `_::rust_cc::Trace` is not implemented for `DoesNotImplementTrace`
  |
  = help: the following other types implement trait `_::rust_cc::Trace`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others

error[E0277]: the trait bound `DoesNotImplementTrace: _::rust_cc::Trace` is not satisfied
  --> tests/derive_macro_tests/invalid_field_bounds.rs:12:7
   |
12 |     A(DoesNotImplementTrace),
   |       ^^^^^^^^^^^^^^^^^^^^^ the trait `_::rust_cc::Trace` is not implemented for `DoesNotImplementTrace`
   |
   = help: the following other types implement trait `_::rust_cc::Trace`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
